setup/Istio/demo/01_demo-istio-namespace.yaml
---
# This Namespace is created for the Istio demo environment.
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo-istio
    name: demo-istio
    istio.io/dataplane-mode: ambient    
  name: demo-istio
spec:
  finalizers:
  - kubernetes
---
