setup/Istio/demo/demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: demo-istio
    name: demo-istio
    istio.io/dataplane-mode: ambient    
  name: demo-istio
spec:
  finalizers:
  - kubernetes
