setup/Istio/demo/02_http-echo-deployment.yaml
---
# This Deployment runs the http-echo application in the demo-istio namespace.
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-echo
  name: http-echo
  namespace: demo-istio
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: http-echo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-echo
    spec:
      containers:
      - args:
        - -text=hello from istio demo
        - -listen=:5678
        image: hashicorp/http-echo:0.2.3
        imagePullPolicy: IfNotPresent
        name: http-echo
        ports:
        - containerPort: 5678
          name: http
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
