setup/Istio/demo/http-echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: http-echo
  namespace: demo-istio
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: http-echo
  sessionAffinity: None
  type: ClusterIP
---
