setup/Istio/demo/04_http-echo-gateway-simple.yaml
---
# This Gateway configures ingress for the http-echo service with HTTP to HTTPS redirection.
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: httpecho-gateway-simple
  namespace: demo-istio
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true # sends 301 redirect for http requests
  - hosts:
    - ${K8S_ENVIRONMENT}.http-echo-simple.slainte.at
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: http-echo-simple-slainte-at # must be the same as secret
---
