setup/Istio/demo/04_http-routing.yaml
---
# HTTPS Routing für http-echo Service (Gateway API)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo-route
  namespace: demo-istio
spec:
  parentRefs:
  - name: slainte-edge
    namespace: istio-gateways
    sectionName: https-wildcard-mtls
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: bookinfo-gateway
  rules:



  hostnames:
    - ${K8S_ENVIRONMENT}.http-echo.slainte.at

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http-echo
          port: 80
---
