setup/Istio/demo/05_http-echo-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: http-echo
  namespace: demo-istio
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: http-echo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http-echo
  namespace: demo-istio
spec:
  hosts:
  - "${K8S_ENVIRONMENT}.http-echo-simple.slainte.at"
  gateways:
  - httpecho-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: http-echo
        port:
          number: 80
---
