setup/Istio/demo/06_http-echo-virtual-service-mutual.yaml
---
# This VirtualService routes traffic from the http-echo-mutual host to the http-echo service.
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http-echo-mutual
  namespace: demo-istio
spec:
  hosts:
  - "${K8S_ENVIRONMENT}.http-echo-mutual.slainte.at"
  gateways:
  - httpecho-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: http-echo
        port:
          number: 80
---
